$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-15 (opened April 24, 2012)

	* rrarefy, drarefy: check the data are integers -- the functions
	do not give sensible results with real values.
	
Version 2.1-14 (opened March 9, 2012)

	* Opened a new version with the CRAN release of vegan 2.0-3 on
	March 3, 2012.

	* Warton, Wright & Wang (Methods Ecol Evol 3, 89-101; 2012) had a
	paper where the analysed the confusion of location (differences
	between groups) and dispersion (variability within groups) in
	dissimilarity-based analyses.  We have warned on this for long in
	vegan, but now we can get support from this paper. Explicit
	arnings added to anosim, mrpp, simper (where this is worst) and
	adonis (where this was already analysed by Marti Anderson when
	introducing the method).

	* adipart, multipart, hiersimu: permutation tests assumed constant
	full gamma diversity in all simulations even when the null model
	could produce variable gamma diversities. The default method
	("r2dtable") had constant gamma diversity.

	* adipart, multipart, hiersimu: these are now generic functions
	with default and formula methods. The formula method is identical
	to the previous function, the default method can take two matrices
	as input, but the second argument describing the hierarchy can be
	missing. In this case a trivial two-level hierarchy will be
	assumed (each row is a seperate group, all rows are in same
	group).

	* anova of prc() objects by "axis", "terms" or "margin" failed due
	to NAMESPACE issues. Reported as issue #7 by Eduard Szöcs in
	github.com.

	* clamtest: wrongly used frequencies instead of the counts
	when calculating sample coverage to test x < coverage.limit. 
	No detectable differences were produced when rerunning 
	examples from Chazdon et al. 2011 (Ecology, 92, 1332--1343)
	and vegan help page.

	* envfit: failed if some of the environmental variables were
	factors with unused factor levels. Fixed in centroids.cca.