@@ -6,6 +6,15 @@ Version 2.1-15 (opened April 24, 2012)
 
 	* rrarefy, drarefy: check the data are integers -- the functions
 	do not give sensible results with real values.
+
+	* monoMDS: checks now that there is a sufficient number of non-NA
+	dissimilarities for the analysis. People really try to use NMDS
+	with too small data sets. The change was triggered by a user who
+	had tried to find a six-dimensional solution for seven points
+	(21 dissimilarities, 42 scores) using 100,000 random starts in
+	metaMDS. With over-defined models there is an infinite number of
+	different solutions with nearly zero stress, and no convergence is
+	found. 
 	
 Version 2.1-14 (opened March 9, 2012)
 
